Bug in handling of TX callbacks during query execution was fixed.